--- a/mange.html
+++ b/mange.html
@@ -20,7 +20,6 @@
         .notif-title { font-weight: bold; color: #333; margin-bottom: 5px; display: flex; align-items: center; gap: 8px; }
         .notif-body { font-size: 13px; color: #666; line-height: 1.5; padding-left: 25px; }
         
-        /* زر الحذف */
         .delete-btn {
             position: absolute; left: 10px; top: 10px;
             background: #f8f9fa; color: #ccc; border: none;
@@ -50,11 +49,9 @@
     </div>
 
 <script>
-    // 1. التقاط معرف المستخدم من الرابط
     const urlParams = new URLSearchParams(window.location.search);
     const currentUserId = urlParams.get('user_id') || '1';
 
-    // 2. دالة جلب الإشعارات
     async function loadNotifications() {
         const list = document.getElementById('notif-list');
         const status = document.getElementById('status');
@@ -93,7 +90,7 @@
         }
     }
 
-    // 3. وظيفة الحذف المحدثة التي طلبتها
+    // وظيفة الحذف المحسنة التي طلبتها
     async function confirmDelete(notifId) {
         if (!confirm("هل تريدين حذف هذا الإشعار نهائياً؟")) return;
 
@@ -120,7 +117,7 @@
                 
                 setTimeout(() => {
                     element.remove();
-                    // إذا لم يتبقَ إشعارات، اظهر رسالة "لا توجد إشعارات"
+                    // إذا لم يتبقَ إشعارات، اظهر رسالة "تم حذف جميع الإشعارات"
                     if (document.querySelectorAll('.notif-card').length === 0) {
                         document.getElementById('notif-list').innerHTML = 
                             '<p style="text-align:center; color:#999; margin-top:50px;">تم حذف جميع الإشعارات ✨</p>';
@@ -138,4 +135,4 @@
     window.onload = loadNotifications;
 </script>
 </body>
-</html> 
+</html>
